// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render default heading if missing heading parameter 1`] = `
preact-render-spy (1 nodes)
-------
<h1 class="ni-heading _ni-heading">
  <a
    class="ni-repo-link _ni-repo-link"
    href="https://github.com/wei"
    target="_blank"
  >
    wei
  </a>
  <span>/</span>
  <a
    class="ni-repo-link _ni-repo-link"
    href="https://github.com/wei/new-issue"
    target="_blank"
  >
    <strong>new-issue</strong>
  </a>
</h1>

`;

exports[`Heading should render nothing with bad parameters 1`] = `
preact-render-spy (1 nodes)
-------
{null}

`;

exports[`Heading should render nothing with bad parameters 2`] = `
preact-render-spy (1 nodes)
-------
{null}

`;

exports[`Heading should render nothing with bad parameters 3`] = `
preact-render-spy (1 nodes)
-------
{null}

`;

exports[`Heading should render nothing with bad parameters 4`] = `
preact-render-spy (1 nodes)
-------
{null}

`;

exports[`Heading should render nothing with bad parameters 5`] = `
preact-render-spy (1 nodes)
-------
{null}

`;

exports[`Heading should render with all parameters 1`] = `
preact-render-spy (1 nodes)
-------
<h1 class="ni-heading _ni-heading">new-issue</h1>

`;
